--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <hr />
     <h2>درجة عشوائية</h2>
     <h4 id="random-grade"></h4>
-    <script src="./script.js"></script>
+  
+    <script src="/script.js"></script>
   </body>
 </html>
